Fix some typos in various src/.yaml and ReadMe

--- a/src/4EJS.yaml
+++ b/src/4EJS.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Invalid tabs as indendation in a mapping
+- name: Invalid tabs as indendantion in a mapping
   from: https://github.com/nodeca/js-yaml/issues/80
   tags: error mapping whitespace
   fail: true
