--- a/src/P2EQ.yaml
+++ b/src/P2EQ.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Invalid sequene item on same line as previous item
+- name: Invalid sequence item on same line as previous item
   from: '@perlpunk'
   tags: error flow mapping sequence
   fail: true
